--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   shared_preferences: ^2.5.2
   intl:
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
