--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.5.2
   intl:
   cached_network_image: ^3.4.1
+  buttons_tabbar: ^1.3.15
 
 dev_dependencies:
   flutter_test:
