--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.5.0 <4.0.0'
+  sdk: '>=3.4.3 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -39,10 +39,10 @@ dependencies:
   flutter_riverpod: ^2.6.1
   dio: ^5.8.0+1
   pretty_dio_logger: ^1.4.0
-  shared_preferences: ^2.5.2
+  shared_preferences:
   intl:
   cached_network_image: ^3.4.1
-  buttons_tabbar: ^1.3.15
+
 
 dev_dependencies:
   flutter_test:
